2003-10-13  Jay Foster  <jay@systech.com>

        * include/dhcp.h: Added prototype for dhcp_set_hostname().
        * src/dhcp_prot.c (set_default_dhcp_tags): Added TAG_HOST_NAME and
        TAG_DHCP_CLIENTID DHCP/BOOTP option support.
        * cdl/net.cdl: Added host name (CYGOPT_NET_DHCP_OPTION_HOST_NAME) and
        MAC address client ID (CYGOPT_NET_DHCP_OPTION_DHCP_CLIENTID_MAC) 
        support.

2003-10-12  Jay Foster  <jay@systech.com>
 
 	* cdl/net.cdl: Added configuration interface for
	CYGOPT_NET_DHCP_PARM_REQ_LIST_REPLACE and
	CYGOPT_NET_DHCP_PARM_REQ_LIST_ADDITIONAL.

2003-10-09  Eric Doenges <Eric.Doenges@DynaPel.com>

        * src/tftp_client.c: Changed the code so that if a packet is
        received out of sequence we don't close the connection but wait
        for the missing packets.
 
2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/bridge.c: Build the test when we have the bridge
	handler code enabled and so presumably a bridge.

2003-09-16  Jay Foster  <jay@systech.com>
 
 	* src/ifaddrs.c (getifaddrs): Fix up allocation and freeing of
    work buffers and data buffers.
 
2003-07-29  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

        * src/dhcp_prot.c (do_dhcp): (re)Initialize the lease when
        dhcp is (re)initialized or retried.
        Return true when the state falls into DHCPSTATE_NOTBOUND so that it 
        knows the interface it still up and can later bring it down when 
        cleaning up.

2003-07-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ipv6_routing_thread.c: Fix compiler warnings
	* cd/net.cdl: The routing thread needs the posix package.

2003-07-24  Nick Garnett  <nickg@balti.calivar.com>

	* src/dhcp_prot.c: Added a declaration for cyg_arc4random() to
	eliminate a compiler warning.

2003-07-15  Nick Garnett  <nickg@balti.calivar.com>

	* include/net/netdb.h: Added include for <sys/param.h>. the in.h
	file included later needs this.

2003-05-23  Andrew Lunn  <andrew.lunn@ascom.ch>
 